--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "export NODE_ENV=dev || SET \"NODE_ENV=dev\" && nodemon start",
-    "test": "mocha --recursive",
-    "test-watch": "nodemon --exec 'npm test'"
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha --recursive",
+    "test-watch": "nodemon --exec 'npm test'",
+    "security-check": "nsp check",
+    "lint": "esw app bin public routes views test repos config models",
+    "lint-watch": "npm run lint -- --watch"
   },
   "engines": {
     "node": "v6.9.3"
@@ -25,10 +28,14 @@
     "validator": "^8.0.0"
   },
   "devDependencies": {
+    "nsp": "^2.7.0",
     "chai": "^4.0.2",
     "expect": "^1.20.2",
     "supertest": "^3.0.0",
     "mocha": "^3.4.2",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "eslint": "^4.4.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-watch": "^3.1.2"
   }
 }
