--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test-watch": "nodemon --exec 'npm test'",
     "security-check": "nsp check",
     "lint": "esw app bin public routes views test repos config models",
-    "lint-watch": "npm run lint -- --watch"
+    "lint-watch": "npm run lint -- --watch",
+    "seed": "node ./config/seed"
   },
   "engines": {
     "node": "v6.9.3"
