--- a/package.json
+++ b/package.json
@@ -16,16 +16,23 @@
     "node": "v6.9.3"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.17.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-session": "^1.15.5",
     "mongoose": "^4.11.7",
-    "mongoose-unique-validator": "^1.0.5",
+    "mongoose-unique-validator": "^1.0.1",
     "morgan": "~1.8.1",
     "nodemon": "^1.11.0",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^1.0.0",
     "pug": "~2.0.0-beta11",
     "serve-favicon": "~2.4.2",
+    "should": "^11.2.1",
     "validator": "^8.0.0"
   },
   "devDependencies": {
